// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Ratings /> expect to render note 0 1`] = `
<div
  style={
    Object {
      "color": "#ff9501",
    }
  }
>
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
</div>
`;

exports[`<Ratings /> expect to render note 3 1`] = `
<div
  style={
    Object {
      "color": "#ff9501",
    }
  }
>
  <Star />
  <Star />
  <Star />
  <StarEmpty />
  <StarEmpty />
</div>
`;

exports[`<Ratings /> expect to render note 3.5 1`] = `
<div
  style={
    Object {
      "color": "#ff9501",
    }
  }
>
  <Star />
  <Star />
  <Star />
  <StarHalf />
  <StarEmpty />
</div>
`;

exports[`<Ratings /> expect to render note 5 1`] = `
<div
  style={
    Object {
      "color": "#ff9501",
    }
  }
>
  <Star />
  <Star />
  <Star />
  <Star />
  <Star />
</div>
`;

exports[`<Ratings /> expect to render note 5 on 10 1`] = `
<div
  style={
    Object {
      "color": "#ff9501",
    }
  }
>
  <Star />
  <Star />
  <Star />
  <Star />
  <Star />
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
</div>
`;

exports[`<Ratings /> expect to render with custom color 1`] = `
<div
  style={
    Object {
      "color": "red",
    }
  }
>
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
  <StarEmpty />
</div>
`;
